Experimental Sudden Death mode; concurrentmod bugfix; streak rank proximity modification; etc.
git-svn-id: http://twcore.org/svn/trunk@2530 9f8b3893-2a26-0410-9d00-a71e40fd2f77